<resources>
    <string name="app_name">NNG-PR10-FCT</string>
    <string name="nav_header_img_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintTxtNombreEmpresa">Nombre de la empresa</string>
    <string name="hintTxtDireccionEmpresa">Dirección</string>
    <string name="hintTxtTelefonoEmpresa">Telefono</string>
    <string name="hitTxtCifEmpresa">CIF</string>
    <string name="hintTxtEmailEmpresa">E-mail</string>
    <string name="hitnTxtPersonaContactoEmpresa">Persona de contacto</string>
    <string name="btnCreacion_Text">Crear</string>
    <string name="lblSinEmpresas">Añadir empresa</string>
    <string name="tilHintNombreEstudiante">Nombre</string>
    <string name="btnCrear_texto">Crear empresa</string>
    <string name="btnActualizar_texto">Actualizar empresa</string>
    <string name="tilHintTelefonoEstudiante">Telefono</string>
    <string name="tilHintCicloFormativoEstudiante">Ciclo Formativo</string>
    <string name="tilHintEmailEstudiante">Email</string>
    <string name="tilHintEmpresaAsignadaEstudiante">Empresa Asignada</string>
    <string name="tilHintTutorEstudiante">Tutor</string>
    <string name="tilHintHoraInicioEstudiante">Hora de inicio</string>
    <string name="tilHintHoraFinEstudiante">Hora de fin</string>
    <string name="tilHintTelefonoTutorEstudiante">Telefono tutor</string>
    <string name="btnCrearEstudianteText">Crear estudiante</string>
    <string name="btnActualizarEstudianteText">Actualizar estudiante</string>
    <string name="lblSinEmpresasParaSeleccionar">No hay empresas</string>
    <string name="lblSinVisitas_Text">No se han realizado visitas</string>
    <string name="tilHintEstudianteVisitado">Estudiante visitado</string>
    <string name="tilHintFechaVisita">Dia de visita</string>
    <string name="tilHintHoraInicio">Hora de inicio</string>
    <string name="tilHintHoraFin">Hora de fin</string>
    <string name="tilHintObservaciones">Observaciones</string>
    <string name="btnCrearVisita_text">Crear visita</string>
    <string name="btnActualizarVisita_text">Actualizar visita</string>
    <string name="lblSinEstudiantesVisitados_text">No hay estudiantes disponibles</string>
</resources>
